# pipecat-music-player

./: README.md
client/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  config.ts  index.css  main.tsx  types.ts
client/src/components/: Grid.tsx  Header.tsx  Toast.tsx
client/src/hooks/: useClickSender.ts  usePreviewPlayer.ts  useServerMessages.ts
client/src/screens/: Artist.tsx  Detail.tsx  Home.tsx  Trending.tsx  Welcome.tsx
server/: .dockerignore  .env.example  Dockerfile  bot.py  catalog_agent.py  deezer.py  descriptions.py  discovery_agent.py  llm.py  pcc-deploy.toml  pyproject.toml  ui_agent.py
