[project]
name = "music-player"
version = "0.1.0"
description = "Music player demo powered by Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[webrtc,daily,silero,soniox,cartesia,openai,runner]>=1.3.0",
    "pipecatcloud>=0.7.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
